--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ DB_NAME='instagram'
 DB_USER='wecode'
 DB_PASSWORD='gasa1'
 DB_HOST='127.0.0.1'
-MODE='dev' 
+MODE='prod' 
 ALLOWED_HOSTS='.herokuapp.com'
 DISABLE_COLLECTSTATIC=1
